# rean.ai

./: .gitignore  DOCKER-README.md  README.md  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.yml  fix-frontend-deps.sh  setup-env.sh  start-minimal.sh
pan-sea-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  index.html  pyproject.toml  requirements.txt  start.sh  test.txt
pan-sea-backend/app/: __init__.py  config.py  main.py
pan-sea-backend/app/api/v1/: api.py
pan-sea-backend/app/api/v1/endpoints/: audio_transcribe.py  auth.py  classes.py  execution.py  performance.py  rag.py  s3.py  student.py  summaries.py  teacher_dashboard.py  users.py  websocket.py
pan-sea-backend/app/core/: __init__.py  audio.py  auth.py  cache.py  dependencies.py  exceptions.py  llm.py  s3.py  websocket.py
pan-sea-backend/app/database/: __init__.py  database.py
pan-sea-backend/app/database/models/: __init__.py  audio_models.py  class_models.py  user_models.py
pan-sea-backend/app/middleware/: exception_handler.py  logging.py  rate_limiting.py  request_id.py  security_headers.py
pan-sea-backend/app/schemas/: class_schemas.py  user_schemas.py
pan-sea-backend/app/services/: __init__.py  audio_service.py  auth_service.py  class_service.py  execute_content_service.py  rag_service.py  summary_service.py  textract_service.py  transcription_service.py  user_service.py
pan-sea-backend/app/services/rag/: __init__.py  embedding_client.py  indexer.py  search_engine.py
pan-sea-backend/app/utils/: document_extractor.py  file_optimization.py  file_validation.py  helpers.py  input_validation.py  prompt_template.py  response_cleaner.py  teacher_validation.py
pan-sea-backend/app/utils/prompts/: __init__.py  base.py  english.py  khmer.py  math.py  science.py  social_studies.py
pan-sea-backend/docs/: REFACTORING_SUMMARY.md  architecture.md  lesson_deletion_guide.md  s3_integration.md
pan-sea-backend/migrations/: env.py
pan-sea-backend/migrations/versions/: 17e4e8bb8a7a_add_embedding_column_to_audio_table.py  19606405495f_merge_heads_c9d8_and_e1f2_lesson_.py  213242fe231d_remove_class_fields_and_rename_title_to_.py  2ac8ba3a6fc4_rename_audio_to_lesson_and_add_lesson_.py  2d3c4b5a6e7f_add_extracted_text_to_lesson_materials.py  3b27f36b85e4_add_lecture_title_to_lecture_summaries.py  3f422b7b7775_add_pgvector_extension_and_vector_column.py  76b5d3262984_replace_s3_fields_with_file_path.py  931c31238dcb_rename_lectures_summaries_to_lesson_.py  a73719455dd4_merge_migration_heads.py  b1c2d3e4f5a6_add_lesson_chunks_table.py  c9d8e7f6a5b4_merge_heads_b1c2_and_3f422.py  e1f2a3b4c5d6_add_lesson_materials_table.py  f5a97910b694_add_embedding_column_to_lessons_table.py  performance_indexes.py
pan-sea-backend/tests/: api_test_examples.sh  test_embedding_fix.py  test_main.py  test_rag_improved.py  test_rag_search.py
pan-sea-frontend/: .dockerignore  Dockerfile  Dockerfile.dev  RAG_IMPLEMENTATION.md  README.md  TESTING_GUIDE.md  next.config.ts  package-lock.json  package.json
speech_dataset/: .gitignore  AWS_S3_UPLOAD_GUIDE.md  BUILD_SUMMARY.md  SAGEMAKER_GUIDE.md  TRAINING_GUIDE.md  Untitled-1.py  aws_credentials_helper.sh  (+31 more)
voice-scraping-n-segmentation/: .gitignore  MFA_REPLACEMENT_SUMMARY.md  README.md  TESTING_GUIDE.md  create_env_file.sh  enable_google_api.md  khmer_model_config.env  main.py  pyproject.toml  requirements.txt  setup_google_credentials.py  setup_google_stt.sh  start_server.py  test_enhanced_transcription.py  test_voice_api.sh
voice-scraping-n-segmentation/config/: settings.py
voice-scraping-n-segmentation/examples/: api_client.py  mfa_tts_training_example.py  test_khmer_voice_processing.py  test_khmer_whisper_hf.py
voice-scraping-n-segmentation/router/: __init__.py  audio_router.py  mfa_training_router.py  models.py  voice_processing_router.py
voice-scraping-n-segmentation/service/: __init__.py  csv_service.py  enhanced_transcription_service.py  mfa_service.py  mfa_training_service.py  s3_service.py  transcription_service.py  vad_service.py  voice_processing_service.py  youtube_extractor.py
voice-scraping-n-segmentation/tests/: test_api.py  test_voice_processing.py
(+96 files in other folders)
